# btrfs-dwarfs-framework

./: .gitignore  .gitlab-ci.yml  .gitmodules  Makefile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  mirror-osp-to-ooc.yaml
abstraction/config/: loader.go
bandwidth/: bdfs.go  service.go  service_test.go
boot/: bdfs-image-update  install.sh
boot/doc/: boot-integration.md
ci/: incus-profile-bdfs.yaml  runner-config.toml  runner-host-setup.md
cmd/gitlab-enhanced/: cmd_bandwidth.go  cmd_lfs.go
config/: defaults.yaml  local.yaml.example
configs/: bdfs-balance.service  bdfs-balance.sh  bdfs-balance.timer  bdfs-scrub.service  bdfs-scrub.sh  bdfs-scrub.timer  bdfs-workspace-shutdown@.service  bdfs.conf  boot.conf
doc/: architecture.md  bdfs.conf.5  bootloader-integration.md  distro-agnostic.md
environments/supervisor/pkg/supervisor/: shutdown_hooks.go  workspace_snapshot.go  workspace_snapshot_test.go
environments/workspace/: Dockerfile
include/uapi/: bdfs_ioctl.h
integrations/btr-fs-git/: .gitlab-ci.yml  README.md
integrations/btr-fs-git/btrfsgit/: bdfs_transfer.py  btrfsgit_bdfs_patch.py
integrations/btrfs-assistant/: README.md
integrations/btrfs-assistant/src/ui/: BdfsPartitionsTab.cpp  BdfsPartitionsTab.h  CMakeLists.txt  CMakeLists_bdfs_addition.txt  MainWindow.cpp  MainWindow.h  MainWindow_bdfs_patch.h
integrations/btrfs-assistant/src/util/: BdfsClient.cpp  BdfsClient.h  CMakeLists.txt  CMakeLists_bdfs_addition.txt
integrations/frzr-meta-root/: README.md
integrations/frzr-meta-root/frzr-meta-root/: .gitlab-ci.yml  ARCHITECTURE.md  README.md  go.mod  main.go
integrations/frzr-meta-root/frzr-meta-root/cmd/: bootstrap.go  kargs.go  pkg.go  rollback.go  root.go  status.go  upgrade.go
integrations/frzr-meta-root/frzr-meta-root/config/: frzr-meta-root.json
integrations/frzr-meta-root/frzr-meta-root/core/: bdfs.go  deploy.go  deploy_bdfs_hook.go  incus.go  stubs.go  system.go
integrations/frzr-meta-root/frzr-meta-root/settings/: settings.go
integrations/frzr-meta-root/frzr-meta-root/systemd/: frzr-meta-root-autoupdate.service  frzr-meta-root-autoupdate.timer
ipfs/dwarfs-pin/: README.md  go.mod  index.go  pin.go  pin_test.go
kernel/btrfs_dwarfs/: bdfs_blend.c  bdfs_dwarfs_part.c  bdfs_internal.h  bdfs_main.c
lfs/adapters/bdfs/: README.md  bdfs.go  bdfs_test.go  setup.go  setup_test.go
tests/integration/: run_all.sh  test_bfg_pin_e2e.sh  test_blend_layer.sh  test_ipfs_pin.sh  test_workspace_health_check.sh  test_workspace_hooks.sh
tests/unit/: CMakeLists.txt  test_compression.c  test_job_alloc.c
tools/: workspace-health-check
tools/autosnap/: autosnap  autosnap.conf  autosnap.py
tools/autosnap/backends/: bdfs.sh  btrfs.sh
tools/autosnap/hooks/apt/: 80-autosnap
tools/autosnap/hooks/dnf/: autosnap.py
tools/autosnap/hooks/pacman/: autosnap-post.hook  autosnap.hook
tools/autosnap/hooks/zypper/: autosnap.py
tools/autosnap/lib/: common.sh
tools/bdfs-pin-helper/: go.mod  main.go
tools/homed/: homed-identity-check.path  homed-identity-check.service  homed-identity-check.sh  homed-identity-check.timer
tools/setup/: bdfs-genfstab.sh
userspace/: CMakeLists.txt
userspace/cli/: bdfs.h  bdfs_autosnap.c  bdfs_export_import.c  bdfs_fetch.c  bdfs_home.c  bdfs_main.c  bdfs_mount.c  bdfs_setup.c  bdfs_snapshot_promote_demote.c  bdfs_status.c  bdfs_userconf.c  bdfs_userconf.h  bdfs_workspace_shutdown.c
userspace/daemon/: bdfs_config.c  bdfs_config.h  bdfs_daemon.c  bdfs_daemon.h  bdfs_exec.c  bdfs_jobs.c  bdfs_jobs_workspace.c  bdfs_mount_table.c  bdfs_netlink.c  bdfs_policy.c  bdfs_shutdown_log.c  bdfs_shutdown_log.h  bdfs_socket.c
